<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="170dp"
        android:layout_marginStart="-25dp"
        android:layout_marginBottom="-15dp"
        android:alpha=".5"
        android:contentDescription="@string/oshi_no_ko_image"
        android:src="@mipmap/oshi_no_ko"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:background="@color/pink"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/txt_desc_img_label"
        android:src="@mipmap/btn_add_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_title_label"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_add_label"
        android:inputType="text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="268dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/txt_select_img_label"
        android:textColor="@color/pink_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btn_prev_tasks"
        android:layout_width="268dp"
        android:layout_height="77dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/txt_previous_label"
        android:textColor="@color/pink_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerItem"
        android:layout_width="383dp"
        android:layout_height="490dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prev_tasks"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>